--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ plugins:
   - jekyll-include-cache
 title: Scribbles GitHub Pages
 description: This webpage is work in progress.
+theme: jekyll-theme-architect
 #remote_theme: mmistakes/minimal-mistakes
 #minimal_mistakes_skin: air
 permalink: pretty
