--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-plugins:
-  - jekyll-include-cache
 title: Scribbles GitHub Pages
 description: This webpage is work in progress.
-theme: jekyll-theme-architect
-#remote_theme: mmistakes/minimal-mistakes
-#minimal_mistakes_skin: air
 permalink: pretty
 encoding: "utf-8"
 locale: "sv-SE"
 timezone: Europe/Stockholm
+
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+  - jekyll-remote-theme
+  - jekyll-include-cache
 
 lsearch: true
 lunr:
