--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,3 @@
 title: Scribbles GitHub Pages
 description: This webpage is work in progress.
-permalink: pretty
-encoding: "utf-8"
-locale: "sv-SE"
-timezone: Europe/Stockholm
-
-remote_theme: pages-themes/architect@v0.2.0
-plugins:
-  - jekyll-remote-theme
-  - jekyll-include-cache
-
-lsearch: true
-lunr:
-  search_within_pages: true
-
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
-
-defaults:
-  - scope:
-      type: pages
-      path: ""
-    values:
-      layout: single
-  - scope:
-      type: posts
-      path: ""
-    values:
-      layout: single
-      author_profile: false
-      show_date: true
-      read_time: true
-      comments: false
-      share: false
-      related: true
+theme: jekyll-theme-minimal
