--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Scribbles GitHub Pages
 description: This webpage is work in progress.
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
