--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: Scribbles GitHub Pages
 description: This webpage is work in progress.
-theme: jekyll-theme-architect
+#theme: jekyll-theme-architect
+remote_theme: pages-themes/architect@v0.2.0
+plugins:
+- jekyll-remote-theme
